# libserialport_example

./: .gitignore  CMakeLists.txt  README.md  blocking_read.c  nonblocking_read.c  serial_utils.c  serial_utils.h  write_and_read.c
src/: blocking_read.c  main.c  nonblocking_read.c  serial_info.c  write_and_read.c
src/utils/: serial_utils.c  serial_utils.h
